--- a/package.json
+++ b/package.json
@@ -30,12 +30,19 @@
   },
   "homepage": "https://github.com/scottrobertson/vue-supabase#readme",
   "dependencies": {
-    "@supabase/supabase-js": "^1.4.2"
+    "@supabase/supabase-js": "^1.4.2",
+    "vue-demi": "^0.11.2"
   },
   "peerDependencies": {
-    "vue": ">=1.x.x"
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "vue": "^2.0.0 || >=3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
   },
   "devDependencies": {
-    "vue": "^2"
+    "vue": "^3.0.0"
   }
 }
