--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "vue-demi": "^0.11.2"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.0.0-rc.1",
+    "@vue/composition-api": "^1.0.4",
     "vue": "^2.0.0 || >=3.0.0"
   }
 }
