--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -2,3 +2,12 @@ template: |
   ## What’s Changed
 
   $CHANGES
+
+version-resolver:
+  major:
+    labels:
+      - "major"
+  minor:
+    labels:
+      - "minor"
+  default: minor
