:construction: Add build script to publish workflow

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">= 1"
   },
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "build": "echo 'building'"
   },
   "repository": {
     "type": "git",
