change echo message

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "npm run test",
-    "build": "echo 'building'"
+    "build": "echo 'building...'"
   },
   "repository": {
     "type": "git",
