add scripts and required packages

--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "vue-supabase",
   "version": "2.0.0",
   "description": "A small wrapper for integrating supabase to Vuejs",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "engine": {
     "node": ">= 1"
   },
   "scripts": {
-    "test": "npm run test",
-    "build": "echo 'building...'"
+    "test": "echo 'no tests to run'",
+    "build": "yarn build:cjs && yarn build:esm && yarn build:types",
+    "build:cjs": "rimraf dist/cjs/* && tsc -p config/tsconfig.cjs.json",
+    "build:esm": "rimraf dist/esm/* && tsc -p config/tsconfig.esm.json",
+    "build:types": "rimraf dist/types/* && tsc -p config/tsconfig.types.json"
   },
   "repository": {
     "type": "git",
@@ -20,11 +25,9 @@
     "supabase"
   ],
   "author": "Scott Robertson",
-  "types": "index.d.ts",
   "license": "MIT",
   "files": [
-    "index.js",
-    "index.d.ts"
+    "dist"
   ],
   "bugs": {
     "url": "https://github.com/scottrobertson/vue-supabase/issues"
@@ -37,5 +40,9 @@
   "peerDependencies": {
     "@vue/composition-api": "^1.0.4",
     "vue": "^2.0.0 || >=3.0.0"
+  },
+  "devDependencies": {
+    "rimraf": "^3.0.2",
+    "typescript": "^4.3.5"
   }
 }
