prefer parallel build

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "prepare": "npm run build",
     "test": "echo 'no tests to run'",
-    "build": "yarn build:cjs && yarn build:esm && yarn build:types",
+    "build": "run-p build:*",
     "build:cjs": "rimraf dist/cjs/* && tsc -p config/tsconfig.cjs.json",
     "build:esm": "rimraf dist/esm/* && tsc -p config/tsconfig.esm.json",
     "build:types": "rimraf dist/types/* && tsc -p config/tsconfig.types.json"
@@ -41,6 +41,7 @@
     "vue": "^2.0.0 || >=3.0.0"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
   }
