--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">= 1"
   },
   "scripts": {
-    "prepare": "npm run build",
+    "prepare": "run-s build",
     "test": "echo 'no tests to run'",
     "build": "run-p build:*",
     "build:cjs": "tsc -p config/tsconfig.cjs.json",
