--- a/config/tsconfig.cjs.json
+++ b/config/tsconfig.cjs.json
@@ -1,7 +1,8 @@
 {
   "extends": "../tsconfig",
   "compilerOptions": {
+    "declaration": true,
     "module": "commonjs" ,
-    "outDir": "../dist/cjs"
+    "outDir": "../dist"
   }
 }
