--- a/config/tsconfig.cjs.json
+++ b/config/tsconfig.cjs.json
@@ -1,8 +1,7 @@
 {
   "extends": "../tsconfig",
   "compilerOptions": {
-    "declaration": true,
     "module": "commonjs" ,
-    "outDir": "../dist"
+    "outDir": "../dist/cjs"
   }
 }
