--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
   "dependencies": {
-    "@supabase/supabase-js": "^1.25.2",
-    "vue-demi": "^0.11.2"
+    "@supabase/supabase-js": "^1.35.2",
+    "@vue/composition-api": "^1.6.0",
+    "vue-demi": "^0.12.5"
   },
   "peerDependencies": {
     "@vue/composition-api": "^1.0.4",
